Fix build warnings